// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`this simple webpage BigCards renders correctly 1`] = `
<div>
  <img
    src="http://lorempixel.com/400/200/sports/undefined"
  />
  <a
    href={undefined}
    onClick={[Function]}
  >
    <p />
  </a>
</div>
`;

exports[`this simple webpage MidCards renders correctly 1`] = `
<div>
  <img
    src="http://lorempixel.com/200/100/food/undefined"
  />
  <a
    href={undefined}
    onClick={[Function]}
  >
    <p />
  </a>
</div>
`;

exports[`this simple webpage NewsList renders correctly 1`] = `
<div
  className="wrapper"
>
  <div
    className="big"
  >
    <div>
      <img
        src="http://lorempixel.com/400/200/sports/1"
      />
      <a
        href=""
        onClick={[Function]}
      >
        <p>
          No apologies James Taylor no right answer my scarf we are. Never getting back together candles Tree Paine all too.
        </p>
      </a>
    </div>
    <div>
      <img
        src="http://lorempixel.com/400/200/sports/2"
      />
      <a
        href=""
        onClick={[Function]}
      >
        <p>
          No apologies James Taylor no right answer my scarf we are. Never getting back together candles Tree Paine all too.
        </p>
      </a>
    </div>
    <div>
      <img
        src="http://lorempixel.com/400/200/sports/3"
      />
      <a
        href=""
        onClick={[Function]}
      >
        <p>
          No apologies James Taylor no right answer my scarf we are. Never getting back together candles Tree Paine all too.
        </p>
      </a>
    </div>
  </div>
  <div
    className="mid"
  >
    <div>
      <img
        src="http://lorempixel.com/200/100/food/0"
      />
      <a
        href=""
        onClick={[Function]}
      >
        <p>
          Sad all too well presumptuous no apologies no apologies break and.
        </p>
      </a>
    </div>
    <div>
      <img
        src="http://lorempixel.com/200/100/food/1"
      />
      <a
        href=""
        onClick={[Function]}
      >
        <p>
          Sad all too well presumptuous no apologies no apologies break and.
        </p>
      </a>
    </div>
    <div>
      <img
        src="http://lorempixel.com/200/100/food/2"
      />
      <a
        href=""
        onClick={[Function]}
      >
        <p>
          Sad all too well presumptuous no apologies no apologies break and.
        </p>
      </a>
    </div>
    <div>
      <img
        src="http://lorempixel.com/200/100/food/3"
      />
      <a
        href=""
        onClick={[Function]}
      >
        <p>
          Sad all too well presumptuous no apologies no apologies break and.
        </p>
      </a>
    </div>
    <div>
      <img
        src="http://lorempixel.com/200/100/food/4"
      />
      <a
        href=""
        onClick={[Function]}
      >
        <p>
          Sad all too well presumptuous no apologies no apologies break and.
        </p>
      </a>
    </div>
    <div>
      <img
        src="http://lorempixel.com/200/100/food/5"
      />
      <a
        href=""
        onClick={[Function]}
      >
        <p>
          Sad all too well presumptuous no apologies no apologies break and.
        </p>
      </a>
    </div>
    <div>
      <a
        href=""
        onClick={[Function]}
      >
        <p>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
        </p>
      </a>
    </div>
    <div>
      <a
        href=""
        onClick={[Function]}
      >
        <p>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
        </p>
      </a>
    </div>
    <div>
      <a
        href=""
        onClick={[Function]}
      >
        <p>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
        </p>
      </a>
    </div>
    <div>
      <img
        src="http://lorempixel.com/200/100/food/5"
      />
      <a
        href="#"
        onClick={[Function]}
      >
        <p>
          Sad all too well presumptuous no apologies no apologies break and.
        </p>
      </a>
    </div>
    <div>
      <img
        src="http://lorempixel.com/200/100/food/6"
      />
      <a
        href="#"
        onClick={[Function]}
      >
        <p>
          Sad all too well presumptuous no apologies no apologies break and.
        </p>
      </a>
    </div>
    <div>
      <img
        src="http://lorempixel.com/200/100/food/7"
      />
      <a
        href="#"
        onClick={[Function]}
      >
        <p>
          Sad all too well presumptuous no apologies no apologies break and.
        </p>
      </a>
    </div>
    <div>
      <img
        src="http://lorempixel.com/200/100/food/8"
      />
      <a
        href="#"
        onClick={[Function]}
      >
        <p>
          Sad all too well presumptuous no apologies no apologies break and.
        </p>
      </a>
    </div>
    <div>
      <img
        src="http://lorempixel.com/200/100/food/9"
      />
      <a
        href="#"
        onClick={[Function]}
      >
        <p>
          Sad all too well presumptuous no apologies no apologies break and.
        </p>
      </a>
    </div>
    <div>
      <img
        src="http://lorempixel.com/200/100/food/10"
      />
      <a
        href="#"
        onClick={[Function]}
      >
        <p>
          Sad all too well presumptuous no apologies no apologies break and.
        </p>
      </a>
    </div>
    <div>
      <a
        href="#"
        onClick={[Function]}
      >
        <p>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
        </p>
      </a>
    </div>
    <div>
      <a
        href="#"
        onClick={[Function]}
      >
        <p>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
        </p>
      </a>
    </div>
    <div>
      <a
        href="#"
        onClick={[Function]}
      >
        <p>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
        </p>
      </a>
    </div>
  </div>
</div>
`;

exports[`this simple webpage SmallCards renders correctly 1`] = `
<div>
  <a
    href={undefined}
    onClick={[Function]}
  >
    <p />
  </a>
</div>
`;
